# rs_commons

./: Cargo.toml
src/: lib.rs
src/domains/: mod.rs
src/domains/http_entities/: api_response.rs
src/domains/http_entities/api_response/: mod.rs
