[package]
name = "rs_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.22", features=["serde"]}
serde = {version="1.0.145", features=["derive"]}
serde_json = "1.0.85"
rocket = {version="0.5.0-rc.2", features=["json"]}
regex = "1.6.0"
rand = {version="0.8.5"}
